--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "DecoTheme",
   "displayName": "DecoTheme",
-  "description": "a deco themed color template for vs code",
+  "description": "a deco themed color theme for vs code",
   "icon": "DecoThemeIcon.png",
   "publisher": "ParsaDehghani",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.71.0"
   },
@@ -12,7 +12,11 @@
     "name": "Parsa dehghani"
   },
   "license": "MIT",
-  "homepage": "https://github.com/Gamer2030a/VSDecoTheme.git",
+  "homepage": "https://github.com/Gamer2030a/VSDecoTheme/blob/main/README.md",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Gamer2030a/VSDecoTheme.git"
+  },
   "keywords": [
     "deco theme",
     "vscode theme",
