updated LICENCE and packaged it

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": {
     "name": "Parsa dehghani"
   },
-  "license": "MIT",
+  "license": "Apache",
   "homepage": "https://github.com/Gamer2030a/VSDecoTheme/blob/main/README.md",
   "repository": {
     "type": "git",
